@@ -17,86 +17,83 @@
 
 ## -*- texinfo -*-
 ##
-## @deftypefn {Function File} {[@var{Xl}, @var{Xu}, @var{Rl}, @var{Ru}] =} qnclosedab (@var{N}, @var{D})
-## @deftypefnx {Function File} {[@var{Xl}, @var{Xu}, @var{Rl}, @var{Ru}] =} qnclosedab (@var{N}, @var{D}, @var{Z})
+## @deftypefn {Function File} {[@var{Xl}, @var{Xu}, @var{Rl}, @var{Ru}] =} qnclosedab (@var{N}, @var{S}, @dots{})
 ##
 ## @cindex bounds, asymptotic
 ## @cindex closed network
 ##
-## Compute Asymptotic Bounds for single-class, closed Queueing Networks
-## with @math{K} service centers.
+## This function computes Asymptotic Bounds for throughput and response
+## time of closed, single or multiclass queueing networks. Single server
+## and delay centers are allowed. Multiple server nodes are not
+## supported.
 ##
-## @strong{INPUTS}
+## This function dispatches the computation to @code{qnclosedsingleab}
+## or @code{qnclosedmultiab}.
 ##
-## @table @var
+## @itemize
 ##
-## @item N
-## number of requests in the system (scalar, @code{@var{N}>0}).
+## @item If @var{N} is a scalar, the network is assumed to have a single
+## class of requests and control is passed to @code{qnclosedsingleab}.
 ##
-## @item D
-## @code{@var{D}(k)} is the service demand of service center @math{k},
-## @code{@var{D}(k) @geq{} 0}.
+## @item If @var{N} is a vector, the network is assumed to have multiple
+## classes of requests, and control is passed to @code{qnclosedmultiab}.
 ##
-## @item Z
-## external delay (think time, scalar, @code{@var{Z} @geq{} 0}). If
-## omitted, it is assumed to be zero.
+## @end itemize
 ##
-## @end table
-##
-## @strong{OUTPUTS}
-##
-## @table @var
-##
-## @item Xl
-## @itemx Xu
-## Lower and upper bound on the system throughput.
-##
-## @item Rl
-## @itemx Ru
-## Lower and upper bound on the system response time.
-##
-## @end table
-##
-## @seealso{qnclosedbsb, qnclosedgb, qnclosedpb}
+## @seealso{qnclosedsingleab, qnclosedmultiab}.
 ##
 ## @end deftypefn
 
 ## Author: Moreno Marzolla <marzolla(at)cs.unibo.it>
 ## Web: http://www.moreno.marzolla.name/
 
-function [Xl Xu Rl Ru] = qnclosedab( N, D, Z )
-  if ( nargin < 2 || nargin > 3 )
+function [Xl Xu Rl Ru] = qnclosedab( N, varargin )
+  if ( nargin < 2 || nargin > 5 )
     print_usage();
   endif
-  ( isscalar(N) && N > 0 ) || \
-      error( "N must be a positive integer" );
-  ( isvector(D) && length(D)>0 && all( D >= 0 ) ) || \
-      error( "D must be a vector of nonnegative floats" );
-  if ( nargin < 3 )
-    Z = 0;
+
+  if (isscalar(N))
+    [Xl Xu Rl Ru] = qnclosedsingleab(N, varargin{:});
   else
-    ( isscalar(Z) && Z >= 0 ) || \
-        error( "Z must be a nonnegative scalar" );
+    [Xl Xu Rl Ru] = qnclosedmultiab(N, varargin{:});
   endif
-  
-  D_tot = sum(D);
-  D_max = max(D);
-  Xl = N/(N*D_tot+Z);
-  Xu = min( N/(D_tot+Z), 1/D_max );
-  Rl = max( D_tot, N*D_max-Z );
-  Ru = N*D_tot;
 endfunction
 
 %!test
 %! fail( "qnclosedab( 1, [] )", "vector" );
-%! fail( "qnclosedab( 1, [0 -1])", "vector" );
+%! fail( "qnclosedab( 1, [0 -1])", ">= 0" );
 %! fail( "qnclosedab( 0, [1 2] )", "positive integer" );
 %! fail( "qnclosedab( -1, [1 2])", "positive integer" );
 
 ## Example 9.6 p. 913 Bolch et al.
 %!test
 %! N = 20;
-%! D = [ 4.6*2 8 ];
+%! S = [ 4.6*2 8 ];
 %! Z = 120;
-%! [X_l X_u R_l R_u] = qnclosedab(N, D, Z);
+%! [X_l X_u R_l R_u] = qnclosedab(N, S, 1, 1, Z);
 %! assert( [X_u R_l], [0.109 64], 1e-3 );
+
+%!demo
+%! D = [10 7 5 4; \
+%!      5  2 4 6];
+%! NN=20;
+%! Xl = Xu = Xmva = zeros(NN,2);
+%! for n=1:NN
+%!   N=[n,10];
+%!   [a b] = qnclosedab(N,D);
+%!   [U R Q X] = qnclosedmultimva(N,D);
+%!   Xl(n,:) = a;
+%!   Xu(n,:) = b;
+%!   Xmva(n,:) = X(:,1)';
+%! endfor
+%! subplot(2,1,1);
+%! plot(1:NN,Xl(:,1),"linewidth", 2, \
+%!      1:NN,Xu(:,1),"linewidth", 2, \
+%!      1:NN,Xmva(:,1),";MVA;");
+%! title("Class 1 throughput");
+%! subplot(2,1,2);
+%! plot(1:NN,Xl(:,2),"linewidth", 2, \
+%!      1:NN,Xu(:,2), "linewidth", 2,\
+%!      1:NN,Xmva(:,2),";MVA;");
+%! title("Class 2 throughput");
+%! xlabel("Number of class 1 requests");
