@@ -3,6 +3,11 @@
 	* Version 1.1.2 released
 	* Restructured the documentation
 	* Fixed function qncmva()
+	* Reduced space requirement for qnclosedsinglemva() when
+	  there are no LD servers
+	* qnclosedsingleab() added
+	* qnclosedmultiab() added
+	* Changed interface for qnclosedab()
 
 2012-09-08 Moreno Marzolla <marzolla@cs.unibo.it>
 
